--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss-loader": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
@@ -19,6 +20,7 @@
     "sass-loader": "^13.2.2",
     "snipcart": "^0.0.1",
     "swiper": "^9.2.0",
+    "use-snipcart": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
