--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/syne": "^4.5.13",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.562.0",
     "open-color": "^1.9.1",
     "postcss-loader": "^7.1.0",
     "react": "^18.2.0",
@@ -18,7 +19,6 @@
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
-    "snipcart": "^0.0.1",
     "swiper": "^9.2.0",
     "use-snipcart": "^1.2.0",
     "web-vitals": "^2.1.4"
